# rusty-gitwiki

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-15-wiki-server-plan.md
docs/superpowers/specs/: 2026-06-15-wiki-server-design.md
src/: admin.rs  api.rs  auth.rs  git.rs  lib.rs  main.rs  pages.rs  search.rs
static/: app.js  index.html  style.css
tests/: integration_test.rs
