[package]
name = "wiki-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wiki-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
bcrypt = "0.15"
comrak = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
